<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:gravity="center"
    android:padding="16dp"
    android:layout_height="wrap_content">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/custum_container"
        android:background="@drawable/layout_bg">

        <Button
            android:id="@+id/custum_button"
            android:text="Login"
            android:duplicateParentState="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <ProgressBar
            android:duplicateParentState="true"
            android:id="@+id/custom_progressbar"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:visibility="invisible"
            android:layout_marginLeft="10dp" />
    </RelativeLayout>


</LinearLayout>